# pystrider

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
demos/: 01_none_deref.py  02_state_threading.py  03_session_interprocedural.py  04_returns_none.py  05_whole_function_repair.py  README.md  _util.py  run.py
docs/: api_absorption_design.md  ast_representation_findings.md  code_reasoning_design.md  codegen_understand.md  critique.md  deep_dive.md  generate.md  grammapy_convergence.md  implementation_plan.md  index.md  newreadme.txt  oracle_contracts.md  playground.md  roadmap.md  spike_findings.md  the_case.md  understand.md  understanding_findings.md  vocabulary_bridge.md
experiments/: api_absorption.py  app_synthesis.py  ast_representation.py  base_tier.py  bidirectional_pattern.py  build_procedure.py  callgraph_synthesis.py  codegen_understand.py  combinators_as_cnl.py  composability_coverage.py  compose_recover.py  conformance_strider.py  controlflow_synthesis.py  diagnosis.py  economic_test.py  footprint_corpus.py  footprint_honesty.py  footprint_scalability.py  footprint_synthesis.py  generator_frontend.py  intake_growth.py  interaction_scaling.py  membrane_vagueness.py  minting_comparison.py  multifunction_synthesis.py  pattern_compose.py  procedure_assembly.py  reach_curve.py  rederivation.py  refusal.py  retarget_family.py  rulestrider.py  scope_recover.py  session_benchmark.py  soundness_redteam.py  spec_synthesis.py  state_threading.py  understand_curve.py  understand_partial.py  understand_partial_curve.py  (+5 more)
grammapy/: __init__.py  _cnl.py  channels.py  combinators.py  guards.py  lattice.py  resolution.py  scope.py
pystrider/: __init__.py  absorb.py  analysis.py  demo.py  emit.cnl  emit.py  footprint.py  intake.py  operators.cnl  operators.py  patterns.py  semantics.cnl  semantics.py  session.py  transform.py
tests/: test_absorb.py  test_api_absorption.py  test_app_synthesis.py  test_ast_representation.py  test_base_tier.py  (+56 more)
(+18 files in other folders)
