[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrider"
version = "0.0.1"
description = "Dynamic, hypothesis-driven Python code analyzer built on the ugm graph machine (spike)."
requires-python = ">=3.10"
dependencies = ["universal-graph-machine"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["pystrider"]
